Add fog tile blob storage API
